2005-11-22  Leonard den Ottolander  <leonard den ottolander nl>

	* editcmd.c (edit_replace_dialog): Alt-p is in use for the
	previous entry. Use Alt-m on pro&Mpt.

2005-11-10  Pavel Roskin  <proski@gnu.org>

	* choosesyntax.c: Make undeclared functions static.
	* editmenu.c: Likewise.
	* usermap.c: Likewise.

2005-10-04  Leonard den Ottolander  <leonard den ottolander nl>

	* editcmd.c (edit_replace_dialog): Replace duplicate hotkey.

2005-09-07  Roland Illig  <roland.illig@gmx.de>

	* editmenu.c: Added a "Save setup..." entry. There had not been
	the possibility of saving editor options except calling the
	"Save setup..." function from within the file manager.

	* edit.c, edit.h, editcmd.c, editwidget.c: Replaced the
	editor_option_backup_ext_int hack with a string configuration
	variable, which allows the backup extension to have more than
	just four characters.

2005-09-05  Roland Illig  <roland.illig@gmx.de>

	* editcmd.c: Fixed some of the gcc warnings.
	* editdraw.c: Moved printwstr() from ../src/slint.c to here.

2005-08-19  David Martin  <dmartina@excite.com>

	* choosesyntax.c (exec_edit_syntax_dialog): Not just mark for
	l10n, but do translate dialog strings.

2005-08-15  Roland Illig  <roland.illig@gmx.de>

	* edit-widget.h: Changed bit fields of length 1 from signed to
	unsigned.
	* editcmd.c (edit_completion_dialog): Code cleanup.
	* editdraw.c (render_edit_text): Removed unused variables.
	* syntax.c (edit_read_syntax_file): Likewise.

2005-08-10  Pavel Roskin  <proski@gnu.org>

	* choosesyntax.c (edit_syntax_dialog): Add parentheses as
	suggested by gcc.
	* editkeys.c: Use braces in the keymap initializers.

2005-07-27  Leonard den Ottolander  <leonard den ottolander nl>

	* choosesyntax.c: Add option to reload current syntax.

2005-07-24  Leonard den Ottolander  <leonard den ottolander nl>

	* choosesyntax.c: Create file. Menu option to override syntax
	highlighting.
	* Makefile.am: Add choosesyntax.c..