@@ -1,3 +1,12 @@
+2006-01-26  Oswald Buddenhagen <ossi@kde.org>
+
+	* edit.c (edit_auto_indent): Remove redundant parameters.
+	Change the indentation strategy to copy whitespace
+	from the previous line instead of filling up with allegedly
+	equivalent whitespace depending on the tab setting.
+	(edit_execute_cmd): Accomodate change of parameters to
+	edit_auto_indent().
+
 2005-11-22  Leonard den Ottolander  <leonard den ottolander nl>
 
 	* editcmd.c (edit_replace_dialog): Alt-p is in use for the
